make dashboard history mthod
